# modules/requests/RequestNotificationServer.php
@@ -1,0 +1,99 @@
+<?php
+
+namespace app\modules\requests;
+
+use SplObjectStorage;
+use SplObserver;
+use SplSubject;
+
+class RequestNotificationServer implements SplSubject
+{
+    /**
+     * @var string
+     */
+    protected string $email;
+
+    /**
+     * @var string
+     */
+    protected string $message;
+
+    /**
+     * @var SplObjectStorage
+     */
+    protected SplObjectStorage $observers;
+
+    /**
+     * @param SplObjectStorage $observers
+     */
+    public function __construct(SplObjectStorage $observers)
+    {
+        $this->observers = $observers;
+    }
+
+    /**
+     * @param SplObserver $observer
+     * @return void
+     */
+    public function attach(SplObserver $observer): void
+    {
+        $this->observers->attach($observer);
+    }
+
+    /**
+     * @param SplObserver $observer
+     * @return void
+     */
+    public function detach(SplObserver $observer): void
+    {
+        $this->observers->detach($observer);
+    }
+
+    /**
+     * @return void
+     */
+    public function notify(): void
+    {
+        /** @var SplObserver $observer */
+        foreach ($this->observers as $observer) {
+            $observer->update($this);
+        }
+    }
+
+    /**
+     * @return string
+     */
+    public function getEmail(): string
+    {
+        return $this->email;
+    }
+
+    /**
+     * @param string $email
+     * @return $this
+     */
+    public function setEmail(string $email): self
+    {
+        $this->email = $email;
+        return $this;
+    }
+
+    /**
+     * @return string
+     */
+    public function getMessage(): string
+    {
+        return $this->message;
+    }
+
+    /**
+     * @param string $message
+     * @return $this
+     */
+    public function setMessage(string $message): self
+    {
+        $this->message = $message;
+
+        return $this;
+    }
+}
