# modules/swagger/modules/v1/requests.json
@@ -1,16 +1,16 @@
 {
     "openapi": "3.0.3",
     "info": {
-        "title": "Трекер",
+        "title": "Заявки",
         "version": "1.0.0"
     },
     "paths": {
-        "/track/default/index": {
+        "/requests/default/index": {
             "get": {
                 "tags": [
-                    "Track"
+                    "Requests"
                 ],
-                "summary": "Track: Список записей",
+                "summary": "Requests: Список записей",
                 "description": "Список записей",
                 "parameters": [
                     {
@@ -37,7 +37,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/components/schemas/track"
+                                                "$ref": "#/components/schemas/request"
                                             }
                                         }
                                     }
@@ -51,12 +51,12 @@
                 }
             }
         },
-        "/track/default/create": {
+        "/requests/default/create": {
             "post": {
                 "tags": [
-                    "Track"
+                    "Requests"
                 ],
-                "summary": "Track: Создание записи",
+                "summary": "Requests: Создание записи",
                 "description": "Создание записи",
                 "requestBody": {
                     "required": true,
@@ -65,15 +65,20 @@
                             "schema": {
                                 "type": "object",
                                 "properties": {
-                                    "track_number": {
+                                    "name": {
                                         "type": "string",
-                                        "description": "Номер трекера",
-                                        "example": "TR-123"
+                                        "description": "Имя",
+                                        "example": "Александр"
                                     },
-                                    "status": {
+                                    "email": {
                                         "type": "string",
-                                        "description": "Статус",
-                                        "example": "new"
+                                        "description": "Email",
+                                        "example": "test@test.ru"
+                                    },
+                                    "message": {
+                                        "type": "string",
+                                        "description": "Сообщение",
+                                        "example": "Сообщение"
                                     }
                                 }
                             }
@@ -86,7 +91,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/track"
+                                    "$ref": "#/components/schemas/request"
                                 }
                             }
                         }
@@ -97,12 +102,12 @@
                 }
             }
         },
-        "/track/default/edit": {
+        "/requests/default/update": {
             "patch": {
                 "tags": [
-                    "Track"
+                    "Requests"
                 ],
-                "summary": "Track: Редактирование записи",
+                "summary": "Requests: Редактирование записи",
                 "description": "Редактирование записи",
                 "parameters": [
                     {
@@ -116,15 +121,15 @@
                             "schema": {
                                 "type": "object",
                                 "properties": {
-                                    "track_number": {
+                                    "comment": {
                                         "type": "string",
-                                        "description": "Номер трекера",
-                                        "example": "TR-123"
+                                        "description": "Комментарий",
+                                        "example": "Комментарий"
                                     },
                                     "status": {
-                                        "type": "string",
+                                        "type": "integer",
                                         "description": "Статус",
-                                        "example": "new"
+                                        "example": 1
                                     }
                                 }
                             }
@@ -137,7 +142,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/track"
+                                    "$ref": "#/components/schemas/request"
                                 }
                             }
                         }
@@ -148,12 +153,12 @@
                 }
             }
         },
-        "/track/default/delete": {
+        "/requests/default/delete": {
             "delete": {
                 "tags": [
-                    "Track"
+                    "Requests"
                 ],
-                "summary": "Track: Удаление записи",
+                "summary": "Requests: Удаление записи",
                 "description": "Удаление записи",
                 "parameters": [
                     {
@@ -163,87 +168,6 @@
                 "responses": {
                     "200": {
                         "$ref": "oas.json#/components/responses/200"
-                    },
-                    "default": {
-                        "$ref": "oas.json#/components/responses/error"
-                    }
-                }
-            }
-        },
-        "/track/default/delete-all": {
-            "post": {
-                "tags": [
-                    "Track"
-                ],
-                "summary": "Track: Удаление группы записей",
-                "description": "Удаление группы записей",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "oas.json#/components/schemas/uuid"
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-
-                            }
-                        }
-                    },
-                    "default": {
-                        "$ref": "oas.json#/components/responses/error"
-                    }
-                }
-            }
-        },
-        "/track/default/update-all": {
-            "post": {
-                "tags": [
-                    "Track"
-                ],
-                "summary": "Track: Массовое обновление записей",
-                "description": "Массовое обновление записей",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "uuids": {
-                                        "type": "array",
-                                        "items": {
-                                            "$ref": "oas.json#/components/schemas/uuid"
-                                        }
-                                    },
-                                    "attributes": {
-                                        "type": "array",
-                                        "items": {
-                                            "$ref": "#/components/schemas/updateAttributes"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-
-                            }
-                        }
                     },
                     "default": {
                         "$ref": "oas.json#/components/responses/error"
@@ -260,8 +184,8 @@
                 "schema": {
                     "type": "string"
                 },
-                "example": "statusValue",
-                "description": "statusValue - Значение статуса"
+                "example": "moderatorRelation",
+                "description": "moderatorRelation - Модератор"
             }
         },
         "schemas": {
@@ -275,31 +199,49 @@
                     }
                 }
             },
-            "track": {
+            "request": {
                 "type": "object",
                 "properties": {
                     "id": {
                         "$ref": "oas.json#/components/schemas/uuid"
                     },
-                    "track_number": {
+                    "name": {
                         "type": "string",
-                        "description": "Номер трекера",
-                        "example": "TR-123"
+                        "description": "Имя",
+                        "example": "Александр"
+                    },
+                    "email": {
+                        "type": "string",
+                        "description": "Email",
+                        "example": "test@test.ru"
+                    },
+                    "message": {
+                        "type": "string",
+                        "description": "Сообщение",
+                        "example": "Сообщение"
+                    },
+                    "comment": {
+                        "type": "string",
+                        "description": "Комментарий",
+                        "example": "Комментарий"
                     },
                     "status": {
-                        "type": "string",
+                        "type": "integer",
                         "description": "Статус",
-                        "example": "new"
+                        "example": 1
+                    },
+                    "idModerator": {
+                        "$ref": "oas.json#/components/schemas/uuid"
                     },
                     "createdAt": {
                         "type": "string",
                         "description": "Время создания",
-                        "example": "2025-03-13 15:00:00"
+                        "example": "18.08.2025 20:00:00"
                     },
                     "updatedAt": {
                         "type": "string",
-                        "description": "Время создания",
-                        "example": "2025-03-13 15:00:00"
+                        "description": "Время обновления",
+                        "example": "18.08.2025 20:00:00"
                     }
                 }
             }
